# DPA-AUP

./: .gitignore  .vercelignore  AGENTS.md  PROJECT_JOURNAL.md  QUICKSTART.md  README.md  RESUME_SKILLS.md  angular.json  index.html  index.tsx  metadata.json  middleware.js  package-lock.json  package.json  pnpm-lock.yaml  proxy.conf.json  vercel.json
.claude/: launch.json
.internal-ingest-data-ota-smoke/: state.json
.internal-ingest-data-ota-smoke/files/: file_ce5e991cbfc954ca.dpa
api/: blob.mjs  db.mjs  edge-config.mjs  internal-api.mjs  redis.mjs
api/cron/: analytics-rollup.mjs  fleet-health.mjs
api/internal-api/: [[...path]].mjs
backups/portal-2026-04-08-working/: README_BACKUP.md  angular.json
docs/: BLE_PHASE_TWO_SCOPE.md  CAPSULE_OTA_CONTRACT.md  CAPSULE_OTA_VALIDATION.md  DEVICE_CONNECTION_MATRIX.md  DPA_PORTAL_FIRMWARE_INTEGRATION_SPEC.md  FEATURE_WIRING_MAP.md  HARDWARE-WIRING.md  HOSTED_PORTAL_DEVICE_SYNC_MATRIX.md  PERFBOARD-SOLDERING-GUIDE.md  SESSION-REPORT.md  STOP-POINT-2026-04-10.md  SYSTEM-ARCHITECTURE.md
dpa-player-workspace/: .gitignore  AGENTS.md  README.md
dpa-player-workspace/demo/: player-sim.html
dpa-player-workspace/firmware/dpa-player-esp32/main/: CMakeLists.txt  audio.c  audio.h  captive_dns.c  captive_dns.h  config.h  dpa_format.c  dpa_format.h  http_srv.c  http_srv.h  led.c  led.h  library.c  library.h  main.c  sd_card.c  sd_card.h  wifi_ap.c  wifi_ap.h
dpa-player-workspace/portal/: angular.json  index.html  package.json  proxy.conf.json  tsconfig.json
firmware/dpa-button-test/: dpa-button-test.ino
firmware/dpa-esp32/: api.h  audio.h  audio_reactive.h  captive.h  dashboard.h  dashboard.html  dashboard_old.html  dpa-esp32.ino  dpa_format.h  dpa_ingest.h  dpa_wifi.h  espnow_mesh.h  gen_dashboard.sh  intelligence.h  led.h  partitions.csv  platformio.ini  proxy.cjs  sd_card.h
firmware/dpa-esp32 copy/: api.h  audio.h  dashboard.h  dashboard.html  dpa-esp32.ino  dpa_wifi.h  led.h  sd_card.h
firmware/dpa-esp32.backup-2026-04-08-working/: README_BACKUP.md  api.h  dashboard.h  dpa-esp32.ino  dpa_wifi.h  led.h  platformio.ini
firmware/dpa-fan-sim/: dpa-fan-sim.ino
firmware/sd-test/: sd-test.ino
internal-ingest-api/: capsule-ota.test.mjs  server.mjs
mockups/: creator-a-cockpit.html  creator-b-studio.html  fan-a-album-hero.html  fan-b-liner-notes.html  index.html
scripts/: capsule-perks-soak.mjs  device-http-relay.mjs  patch-dpa-internal-api-meta.mjs
site/: index.html
src/: app.component.html  app.component.ts  app.routes.ts  default-cover.ts  dpa-device-http.ts  dpa-internal-api-base.ts  types.ts  web-apis.d.ts
src/constants/: led-patterns.ts
src/design/: tokens.css  tokens.ts
src/guards/: portal-access.guard.ts
src/services/: crypto.service.ts  data.service.ts  device-ble.service.ts  dpa-config.ts  (+14 more)
test-results/: upload-16mhz-130mb-response.json  upload-16mhz-response.json  upload-auto-response.json
ui-checks/: creator-routed.html  device-compact-hud.html  device-dashboard.html  fan-portal.html  fan-routed.html  hud_probe.json
(+117 files in other folders)
